--- a/src/style.css
+++ b/src/style.css
@@ -22,7 +22,10 @@ li {
   color: rgb(155, 155, 155);
   font-size: 16px;
   font-weight: 100;
+}
+li::first-letter{
   text-transform: capitalize;
+
 }
 
 
