--- a/src/style.css
+++ b/src/style.css
@@ -68,3 +68,14 @@ li::first-letter{
     top: -34px;
 
 }
+
+
+.weather-temperature.active{
+  color: black;
+  cursor: default;
+}
+
+.weather-temperature.active.hover{
+text-decoration: none;
+
+}
