--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,9 @@ li::first-letter{
   text-transform: capitalize;
 
 }
+a{
+  text-decoration: none;
+}
 
 
 .weather-app-wrapper{
@@ -78,4 +81,7 @@ li::first-letter{
 .weather-temperature.active.hover{
 text-decoration: none;
 
+}
+.active{
+  color: blue;
 }
