--- a/src/style.css
+++ b/src/style.css
@@ -85,3 +85,23 @@ text-decoration: none;
 .active{
   color: black;
 }
+
+.weather-forecast{
+  margin-top: 20px;
+  text-align: center;
+  color: black;
+
+}
+
+.weather-forecast-date{
+  font-size: 16px;
+  opacity: 0.6;
+}
+
+.weather-forecast-temperature-min{
+  opacity: 0.6;
+}
+
+.weather-forecast-temperatures{
+  font-size: 13px;
+}
